@@ -13,8 +13,12 @@ class CREMapInformation : public QObject
 
         const QString& path() const;
 
+        const QString& name() const;
+        void setName(const QString& name);
+
     protected:
         QString myPath;
+        QString myName;
 };
 
 #endif // CLASS_CRE_MAP_INFORMATION_H
